# ctgov-compliance-web

./: .cursorignore  .dockerignore  .env.example  .env.template  .gitignore  DEV_ENV.md  Dockerfile  Dockerfile.data-init  Dockerfile.migration  README.md  flake.nix  gcloud-logs.json  pyproject.toml  report.html  report.json  requirements.txt  restart.sh
.codex/: setup.sh
.flyway/sql/: V1__create_orgs_and_users.sql  V1__create_users.sql  V2__create_org_and_trials.sql  V2__create_user_org_and_trials.sql  V3__create_login_activity.sql  V4__create_password_reset.sql  V5__add_perf_indexes.sql  V5__create_mv.sql  V6__create_index_on_id_of_org_trial_trial_compliance.sql  V7__add_funding_source_class_to_org.sql
.github/workflows/: deploy.yml  init-cloud-database.yml  preview-cleanup.yml  test.yml
docs/features/: README.md
maint/gcp/cloud-sql/: pom.xml
scripts/: check_db_status.py  destroy_dev_db.sh  dev_backend.sh  dev_frontend.sh  init_cloud_data.py  init_mock_data.py  load_environment.sh  populate_blazegraph.py  setup.sh
scripts/docker/: run-migration.sh
scripts/flake/: aws_login.sh  clean.sh  clean_full.sh  clean_no_db.sh  run_flyway.sh  shellhook.sh  start_blazegraph.sh  start_redis.sh
tests/: conftest.py  test_app.py  test_auth.py  test_cloud_db.py  test_dashboard.py  test_db.py  test_import.py  test_page.py  test_queries.py  test_reporting_metrics.py  test_route_helpers.py  test_routes.py  test_simple.py
web/: __init__.py  app.py  auth.py  dashboard.py  db.py  devserver.py  routes.py  telemetry.py
web/backend/: __init__.py  main.py
web/backend/api/: __init__.py  auth.py  routes.py  schema.py
web/backend/docs/: api.md
web/backend/repositories/: __init__.py  queries.py
web/backend/services/: __init__.py  route_helpers.py
web/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.eslint.json  tsconfig.node.json  vite.config.ts
web/frontend/.storybook/: main.ts  preview.ts  theme-decorator.tsx
web/frontend/api/: README.md
web/frontend/src/: App.tsx  main.tsx
web/mcp/ctgov_mcp/: __init__.py  chat.py  interface.py  llm_parser.py  pattern_parser.py  query_engine.py  server.py
web/shared/: __init__.py
web/shared/contracts/: __init__.py  openapi.yaml
web/static/: style.css
web/static/js/: column-config.js  query-workspace.js  reporting.js  search-autocomplete.js  theme-manager.js
web/templates/: dashboard.html  layout.html  login.html  org_dashboard.html  query_workspace.html  register.html  reporting.html  reset_password.html  reset_request.html  ring.html  trials.html  user_dashboard.html
web/templates/auth/: login.html  register.html  reset_password.html
web/templates/dashboards/: compare.html  dashboard.html  home.html  metrics_card.html  organization.html  organization_table.html  search.html  trials.html  user.html
web/templates/reports/: print_report.html
web/templates/sidebars/: compare_sidebar.html  metrics_card.html  search.html
web/templates/tables/: card.html  compare_card.html  compare_table.html  header.html  organization_table.html  table.html  (+1 more)
web/utils/: pagination.py  queries.py  reporting_metrics.py  route_helpers.py
(+24 files in other folders)
