[project]
name = "ctgov-compliance-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-gcp-monitoring<=1.9.0a0",
    "opentelemetry-exporter-gcp-trace>=1.9.0",
    "opentelemetry-instrumentation-flask>=0.57b0",
    "opentelemetry-instrumentation-psycopg2>=0.57b0",
    "opentelemetry-instrumentation-requests>=0.57b0",
    "opentelemetry-propagator-gcp>=1.9.0",
    "opentelemetry-sdk>=1.36.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]
